--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -41,7 +41,7 @@
 
 body {
   margin: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: Arial;
   font-size: calc(1.265rem + 0.18vw);
   font-weight: 400;
   line-height: 1.75;
@@ -66,7 +66,8 @@ hr:not([size]) {
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   margin-top: 0;
   margin-bottom: 15px;
-  font-family: "Poppins", sans-serif;
+  margin: 20px;
+  font-family: Arial;
   font-weight: 700;
   line-height: 1.2;
   color: #232324; }
@@ -491,8 +492,8 @@ progress {
   width: 100%;
   padding-right: var(--bs-gutter-x, 15px);
   padding-left: var(--bs-gutter-x, 15px);
-  margin-right: auto;
-  margin-left: auto; }
+  margin-right: 100px;
+  margin-left: 100px; }
 
 @media (min-width: 576px) {
   .container, .container-sm {
